res/examples/invalid/fn_expr_returning_string.eg
(a: number, b: number): string => "foo";

// out: SyntaxError: unexpected "\"foo\""; expected: ["\"{\"", "\"(\""]